# damngood

./: README.md  pyproject.toml
damngood/: mcp_manager.py  tui.py
