[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "damngood"
version = "0.1.0"
description = "A simple CLI tool to manage Model Context Protocol (MCP) servers across multiple AI coding assistants"
authors = [{name = "5LV10", email = "goutham.k0044@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
]
keywords = ["mcp", "cli", "cursor", "claude", "gemini", "opencode", "ai", "coding"]
dependencies = [
    "rich>=13.0.0",
]

[project.scripts]
damngood = "damngood.mcp_manager:main"

[project.urls]
Homepage = "https://github.com/5LV10/damngood"
Repository = "https://github.com/5LV10/damngood"

[tool.setuptools.packages.find]
where = ["."]
include = ["damngood*"]
